# compiler

./: .AST.c.swp  .main.c.swo  .main.c.swp  AST.c  AST.h  README.md  build.sh  codeGen.c  codeGen.h  generated.asm  hashmap.h  main.c  test.c  tokenizer.c
ai_module/model/: optimization_rankey.py
docs/: architecture.md  developer_guide.md
examples/: CMakeLists.txt  fibonacci.lang  hello_world.lang  matrix_multiply.lang  neural_net.lang
executable/: compiler
scripts/: build.sh  setup_ai.sh  test.sh
src/: main.cpp
src/ai_optimize/: ai_optimizer.cpp  ai_optimizer.h
src/ast/: ast_nodes.h  ast_printer.h  visitor.h
src/backend/: llvm_backend.cpp  llvm_backend.h
src/diagnostics/: error_reporter.h  source_location.h
src/ir/: ir.cpp  ir.h  ir_builder.cpp  ir_builder.h  ssa_ir.h
src/jit/: jit_engine.cpp  jit_engine.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/optimizer/: constant_folding.h  optimizer.cpp  optimizer.h
src/parser/: parser.cpp  parser.h
src/semantic/: .semantic_analyzer.cpp.swp  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.h  type_system.h
src/utils/: memory_pool.h  string_table.h  timer.h
tests/integration/: test_full_pipeline.cpp
tests/unit/: test_lexer.cpp  test_parser.cpp  test_semantic.cpp
